--- a/scripts/templates/readme.md.j2
+++ b/scripts/templates/readme.md.j2
@@ -5,7 +5,7 @@
 
 <!-- END doctoc generated TOC please keep comment here to allow auto update -->
 
-## How do you use this module?
+## How to use this module?
 
 This directory defines a [Terraform](https://www.terraform.io/) 
 [module](https://www.terraform.io/docs/modules/usage.html) you can use in your
@@ -55,7 +55,7 @@ general usage of this repository.
 
 ## What are the available detectors in this module?
 
-This module creates the following SignalFx detectors which could contain one or mulitple alerting rules:
+This module creates the following SignalFx detectors which could contain one or multiple alerting rules:
 
 {{ detectors }}
 
