#203 bunch of makefile improvements
- toc is now a full separate target to use only when we want to check the entire repo
- so readmes target is simply dropped and doc becomes the target to gen modules readmes/doc
- all modules related target can now accept an argument which is a filter to limit the scope of execution. If no arg is provided the filter is "*" which correspond to all directories in `/modules`, else it will use it as filter for bash files expansion (so you can use either a full directory name like `make detectors smart-agent_system-common` or a wildcard based pattern like `make detectors *system*`).
- outputs target is now run AFTER detectors target to ensure outputs is always up to date and avoid to run it again
- new modules target allows to run all modules related targets in once to ease contribution (detectors, outputs, doc)
- the module target used to bootstrap a new module now also create the conf directory along with a its empty/minimal readme yaml config
- ci has been updated to support these changes
- doc has been updated with makefile improvements

--- a/scripts/templates/readme.md.j2
+++ b/scripts/templates/readme.md.j2
@@ -92,7 +92,7 @@ organization](https://docs.signalfx.com/en/latest/integrations/integrations-refe
 There are always available and do not need any configuration to work.
 {%- endif %}
 
-{% if source_doc is defined -%}
+{% if source_doc is defined and source_doc is not none -%}
 {{ source_doc }}
 {%- endif %}
 
@@ -106,7 +106,7 @@ There are always available and do not need any configuration to work.
 
 * [Terraform SignalFx provider](https://registry.terraform.io/providers/splunk-terraform/signalfx/latest/docs)
 * [Terraform SignalFx detector](https://registry.terraform.io/providers/splunk-terraform/signalfx/latest/docs/resources/detector)
-{% if documentations is defined -%}
+{% if documentations is defined and documentations is not none -%}
 {% for documentation in documentations -%}
 * [{{ documentation.name}}]({{ documentation.url }})
 {% endfor %}
