generator: support disable alerting rules

--- a/scripts/templates/variables.tf.j2
+++ b/scripts/templates/variables.tf.j2
@@ -53,7 +53,7 @@ variable "{{ id }}_runbook_url" {
 variable "{{ id }}_disabled" {
   description = "Disable all alerting rules for {{ id }} detector"
   type        = bool
-  default     = null
+  default     = {% if disabled is sameas true %}true{% else %}null{% endif %}
 }
 
 {% if rules | length > 1 -%}
