--- a/scripts/templates/variables.tf.j2
+++ b/scripts/templates/variables.tf.j2
@@ -64,18 +64,18 @@ variable "{{ id }}_disabled_{{ severity }}" {
   type        = bool
   default     = null
 }
-{% if rule.lasting is string %}
+{% if rule.lasting_duration is string %}
 variable "{{ id }}_lasting_duration_{{ severity }}" {
-  description = "Minimum duration that conditions must be true before raising alert (in seconds)"
+  description = "Minimum duration that conditions must be true before raising alert"
   type        = string
-  default     = "{{ rule.lasting }}"
+  default     = "{{ rule.lasting_duration }}"
 }
 {% endif -%}
-{% if rule.at_least is number %}
+{% if rule.lasting_at_least is number %}
 variable "{{ id }}_at_least_percentage_{{ severity }}" {
   description = "Percentage of lasting that conditions must be true before raising alert (>= 0.0 and <= 1.0)"
   type        = number
-  default     = "{{ rule.at_least }}"
+  default     = "{{ rule.lasting_at_least }}"
 }
 {% endif %}
 {% endfor -%}
