--- a/scripts/templates/readme.md.j2
+++ b/scripts/templates/readme.md.j2
@@ -32,8 +32,8 @@ Note the following parameters:
   instance of the module.
   Its value will be added to the `prefixes` list at the start of the [detector 
   name](https://github.com/claranet/terraform-signalfx-detectors/wiki/Templating#example).
-  In general, it will also be used in `filtering` internal sub-module to apply a
-  [filtering](https://github.com/claranet/terraform-signalfx-detectors/wiki/Guidance#filtering) based on our default 
+  In general, it will also be used in the `filtering` internal sub-module to [apply
+  [filters](https://github.com/claranet/terraform-signalfx-detectors/wiki/Guidance#filtering) based on our default 
   [tagging convention](https://github.com/claranet/terraform-signalfx-detectors/wiki/Tagging-convention) by default.
 
 * `notifications`: Use this parameter to define where alerts should be sent depending on their severity. It consists 
