--- a/scripts/templates/readme.md.j2
+++ b/scripts/templates/readme.md.j2
@@ -70,7 +70,7 @@ This module uses metrics available from
 {% if source_type == 'smart-agent' -%}
 [monitors](https://docs.signalfx.com/en/latest/integrations/agent/monitors/_monitor-config.html)
 available in the [SignalFx Smart 
-Agent](https://github.com/signalfx/signalfx-agent). Check the "Related documentation" section for more 
+Agent](https://github.com/signalfx/signalfx-agent). Check the [Related documentation](#related-documentation) section for more 
 information including the official documentation of this monitor.
 {% elif source_type == 'otel-collector' -%}
 [receivers](https://github.com/open-telemetry/opentelemetry-collector/blob/master/receiver/README.md) 
