--- a/scripts/templates/variables.tf.j2
+++ b/scripts/templates/variables.tf.j2
@@ -85,21 +85,17 @@ variable "{{ id }}_threshold_{{ severity }}" {
   default     = {{ rule.threshold }}
     {%- endif %}
 }
-{% set lasting_duration = rule.lasting_duration|default('None') -%}
-{% if lasting_duration is string %}
+
 variable "{{ id }}_lasting_duration_{{ severity }}" {
   description = "Minimum duration that conditions must be true before raising alert"
   type        = string
-  default     = "{{ lasting_duration }}"
+  default     = {% if rule.lasting_duration is string %}"{{ rule.lasting_duration }}"{% else %}null{% endif %}
 }
-{% endif -%}
-{% set lasting_at_least = rule.lasting_at_least|default(1.0) -%}
-{% if lasting_at_least is number %}
+
 variable "{{ id }}_at_least_percentage_{{ severity }}" {
   description = "Percentage of lasting that conditions must be true before raising alert (>= 0.0 and <= 1.0)"
   type        = number
-  default     = {{ lasting_at_least }}
+  default     = {{ rule.lasting_at_least | default(1) }}
 }
-{% endif %}
 {% endfor -%}
 {% endif -%}
