Apply suggestions from code review
Co-authored-by: Spi <BzSpi@users.noreply.github.com>

--- a/scripts/templates/readme.md.j2
+++ b/scripts/templates/readme.md.j2
@@ -84,8 +84,8 @@ thanks to its [prometheus exporter monitor](https://docs.signalfx.com/en/latest/
 [OpenTelemetry Collector](https://github.com/signalfx/splunk-otel-collector) using its [prometheus
 receiver](https://github.com/open-telemetry/opentelemetry-collector-contrib/tree/main/receiver/prometheusreceiver) or its derivates.
 {% elif source_type == 'fame' -%}
-the [Function Azure Monitoring Extension](https://github.com/claranet/fame), an Azure Function App written in Python which allow to
-run Log Analytics queries and send result to Splunk Observability. More information available in the [dedicated
+the [Function for Azure Monitoring Extension](https://github.com/claranet/fame), an Azure Function App written in Python which allows to
+run Log Analytics queries and send result to Splunk Observability as metrics. More information available in the [dedicated
 readme](https://github.com/claranet/fame/blob/master/README.md).
 {% elif source_type == 'integration_aws' -%}
 the [AWS integration](https://docs.signalfx.com/en/latest/integrations/amazon-web-services.html) configurable
