source: add fame (#372)
* source: add fame

* Apply suggestions from code review

Co-authored-by: Spi <BzSpi@users.noreply.github.com>

Co-authored-by: Spi <BzSpi@users.noreply.github.com>

--- a/scripts/templates/readme.md.j2
+++ b/scripts/templates/readme.md.j2
@@ -83,6 +83,10 @@ They are generally called "Prometheus Exporter" which can be fetched by both the
 thanks to its [prometheus exporter monitor](https://docs.signalfx.com/en/latest/integrations/agent/monitors/prometheus-exporter.html) and the
 [OpenTelemetry Collector](https://github.com/signalfx/splunk-otel-collector) using its [prometheus
 receiver](https://github.com/open-telemetry/opentelemetry-collector-contrib/tree/main/receiver/prometheusreceiver) or its derivates.
+{% elif source_type == 'fame' -%}
+the [Function for Azure Monitoring Extension](https://github.com/claranet/fame), an Azure Function App written in Python which allows to
+run Log Analytics queries and send result to Splunk Observability as metrics. More information available in the [dedicated
+readme](https://github.com/claranet/fame/blob/master/README.md).
 {% elif source_type == 'integration_aws' -%}
 the [AWS integration](https://docs.signalfx.com/en/latest/integrations/amazon-web-services.html) configurable
 with this Terraform [module](https://github.com/claranet/terraform-signalfx-integrations/tree/master/cloud/aws).
