--- a/scripts/templates/detector.tf.j2
+++ b/scripts/templates/detector.tf.j2
@@ -16,10 +16,6 @@ resource "signalfx_detector" "{{ id }}" {
   authorized_writer_teams = var.authorized_writer_teams
   teams                   = try(coalescelist(var.teams, var.authorized_writer_teams), null)
   tags                    = compact(concat(local.common_tags, local.tags, var.extra_tags))
-  {%- if type == 'heartbeat' %}
-
-  max_delay = 900
-  {%- endif %}
 
 {%- for key, signal in signals.items() -%}
   {%- if loop.last -%}
@@ -103,5 +99,7 @@ EOF
     parameterized_body    = var.message_body == "" ? local.rule_body : var.message_body
   }
   {%- endfor %}
+
+  max_delay = var.{{ id }}_max_delay
 }
 
