--- a/scripts/templates/variables.tf.j2
+++ b/scripts/templates/variables.tf.j2
@@ -36,6 +36,12 @@ variable "{{ id }}_transformation_function" {
 
 {% endif -%}
 
+variable "{{ id }}_max_delay" {
+  description = "Enforce max delay for {{ id }} detector (use \"0\" or \"null\" for \"Auto\")"
+  type        = number
+  default     = {% if max_delay is number %}{{ max_delay }}{% else %}{% if type == 'heartbeat' %}900{% else %}null{% endif %}{% endif %}
+}
+
 variable "{{ id }}_tip" {
   description = "Suggested first course of action or any note useful for incident handling"
   type        = string
